--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">Korea University<sup>1</sup>, Sooknyung Women's University<sup>2</sup>, KAIST<sup>3</sup> <br>CVPR 2025</span>
+                    <span class="author-block">Korea University<sup>1</sup>, Sookmyung Women's University<sup>2</sup>, KAIST<sup>3</sup> <br>CVPR 2025</span>
                     <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Corresponding Authors</small></span>
                   </div>
 
@@ -175,7 +175,7 @@
       <div id="results-carousel" class="carousel results-carousel">
        <div class="item">
         <!-- Your image here -->
-        <img src="assets/algorithm.png" alt="MY ALT TEXT"/>
+        <img src="static/images/algorithm.png" alt="MY ALT TEXT"/>
         <h2 class="subtitle has-text-centered">
           Overall flowchart of IDS
         </h2>
@@ -263,7 +263,7 @@
 
 
 <!-- Paper poster -->
-<section class="hero is-small is-light">
+<!-- <section class="hero is-small is-light">
   <div class="hero-body">
     <div class="container">
       <h2 class="title">Poster</h2>
@@ -273,7 +273,7 @@
         
       </div>
     </div>
-  </section>
+  </section> -->
 <!--End paper poster -->
 
 
@@ -281,7 +281,14 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>BibTex Code Here</code></pre>
+      <pre><code>
+        @article{kim2025identity,
+          title={Identity-preserving Distillation Sampling by Fixed-Point Iterator},
+          author={Kim, SeonHwa and Kim, Jiwon and Park, Soobin and Ahn, Donghoon and Kang, Jiwon and Kim, Seungryong and Jin, Kyong Hwan and Cha, Eunju},
+          journal={arXiv preprint arXiv:2502.19930},
+          year={2025}
+        }
+      </code></pre>
     </div>
 </section>
 <!--End BibTex citation -->
