--- a/index.html
+++ b/index.html
@@ -180,19 +180,19 @@
           Overall flowchart of IDS
         </h2>
       </div>
-<!--      <div class="item">
+<!--       <div class="item">
         <img src="static/images/carousel2.jpg" alt="MY ALT TEXT"/>
         <h2 class="subtitle has-text-centered">
           Second image description.
         </h2>
-      </div>
-      <div class="item">
+      </div> -->
+<!--       <div class="item">
         <img src="static/images/carousel3.jpg" alt="MY ALT TEXT"/>
         <h2 class="subtitle has-text-centered">
          Third image description.
        </h2>
-     </div>
-     <div class="item">
+     </div> -->
+<!--      <div class="item">
       <img src="static/images/carousel4.jpg" alt="MY ALT TEXT"/>
       <h2 class="subtitle has-text-centered">
         Fourth image description.
