--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
       <div id="results-carousel" class="carousel results-carousel">
        <div class="item">
         <!-- Your image here -->
-        <img src="assets/algorithm.png" alt="MY ALT TEXT"/>
+        <img src="static/images/algorithm.png" alt="MY ALT TEXT"/>
         <h2 class="subtitle has-text-centered">
           Overall flowchart of IDS
         </h2>
