--- a/index.html
+++ b/index.html
@@ -149,6 +149,9 @@
 </section> here-->
 <!-- End teaser video -->
 
+<section>
+  <img src="static/images/algorithm.png" style="width: 100%;" alt="테스트 이미지">
+</section>
 
 <!-- Paper abstract -->
 <section class="section hero is-light">
