--- a/index.html
+++ b/index.html
@@ -149,10 +149,6 @@
 </section> here-->
 <!-- End teaser video -->
 
-<section>
-  <img src="static/images/algorithm.png" style="width: 100%;" alt="테스트 이미지">
-</section>
-
 <!-- Paper abstract -->
 <section class="section hero is-light">
   <div class="container is-max-desktop">
@@ -320,6 +316,13 @@
 <!-- You can add a tracker to track page visits by creating an account at statcounter.com -->
 
     <!-- End of Statcounter Code -->
+<script>
+  bulmaCarousel.attach('#results-carousel', {
+    slidesToScroll: 1,
+    slidesToShow: 1,
+    loop: true
+  });
+</script>
 
   </body>
   </html>
