--- a/index.html
+++ b/index.html
@@ -49,8 +49,6 @@
 
 </head>
 <body>
-
-
   <section class="hero">
     <div class="hero-body">
       <div class="container is-max-desktop">
@@ -60,28 +58,36 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="https://scholar.google.com/citations?user=RE9ZWDwAAAAJ&hl=ko&oi=sra" target="_blank">SeonHwa Kim</a><sup>1</sup>,</span>
-                <span class="author-block">
-                  <a href="" target="_blank">Jiwon Kim</a><sup>1</sup>,</span>
-                  <span class="author-block">
-                    <a href="" target="_blank">Soobin Park</a><sup>2</sup>,</span>
-                    <span class="author-block">
-                      <a href="https://scholar.google.com/citations?user=b_m86AoAAAAJ&hl=ko&oi=sra" target="_blank">Donghoon Ahn</a><sup>1</sup>,</span>
-                      <span class="author-block">
-                        <a href="" target="_blank">Jiwon Kang</a><sup>1</sup>,</span>
-                        <span class="author-block">
-                          <a href="https://scholar.google.com/citations?user=cIK1hS8AAAAJ&hl=ko&oi=sra" target="_blank">Seungryong Kim</a><sup>3*</sup>,</span>
-                          <span class="author-block">
-                            <a href="https://scholar.google.com/citations?user=aLYNnyoAAAAJ&hl=ko&oi=sra" target="_blank">Kyong Hwan Jin</a><sup>1*</sup>,</span>
-                            <span class="author-block">
-                              <a href="https://scholar.google.com/citations?user=mqNGNqEAAAAJ&hl=ko" target="_blank">Eunju Cha</a><sup>2*</sup>
-                  </span>
-                  </div>
+                <a href="https://scholar.google.com/citations?user=RE9ZWDwAAAAJ&hl=ko&oi=sra" target="_blank">SeonHwa Kim</a><sup>1</sup>,
+              </span>
+              <span class="author-block">
+                <a href="" target="_blank">Jiwon Kim</a><sup>1</sup>,
+              </span>
+              <span class="author-block">
+                <a href="" target="_blank">Soobin Park</a><sup>2</sup>,
+              </span>
+              <span class="author-block">
+                <a href="https://scholar.google.com/citations?user=b_m86AoAAAAJ&hl=ko&oi=sra" target="_blank">Donghoon Ahn</a><sup>1</sup>,
+              </span>
+              <span class="author-block">
+                <a href="" target="_blank">Jiwon Kang</a><sup>1</sup>,
+              </span>
+              <br>
+              <span class="author-block">
+                <a href="https://scholar.google.com/citations?user=cIK1hS8AAAAJ&hl=ko&oi=sra" target="_blank">Seungryong Kim</a><sup>3*</sup>,
+              </span>
+              <span class="author-block">
+                <a href="https://scholar.google.com/citations?user=aLYNnyoAAAAJ&hl=ko&oi=sra" target="_blank">Kyong Hwan Jin</a><sup>1*</sup>,
+              </span>
+              <span class="author-block">
+                <a href="https://scholar.google.com/citations?user=mqNGNqEAAAAJ&hl=ko" target="_blank">Eunju Cha</a><sup>2*</sup>
+              </span>
+            </div>
 
-                  <div class="is-size-5 publication-authors">
-                    <span class="author-block">Korea University<sup>1</sup>, Sookmyung Women's University<sup>2</sup>, KAIST<sup>3</sup> <br>CVPR 2025</span>
-                    <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Corresponding Authors</small></span>
-                  </div>
+            <div class="is-size-5 publication-authors">
+              <span class="author-block">Korea University<sup>1</sup>, Sookmyung Women's University<sup>2</sup>, KAIST<sup>3</sup> <br>CVPR 2025</span>
+              <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Corresponding Authors</small></span>
+            </div>
 
                   <div class="column has-text-centered">
                     <div class="publication-links">
@@ -108,24 +114,24 @@
                   </span> -->
 
                   <!-- Github link -->
-                  <span class="link-block">
-                    <a href="https://github.com/shhh0620/IDS" target="_blank"
-                    class="external-link button is-normal is-rounded is-dark">
+                <span class="link-block">
+                  <a href="https://github.com/shhh0620/IDS" target="_blank"
+                  class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
-                    <span>Code</span>
+                  <span>Code</span>
                   </a>
                 </span>
 
                 <!-- ArXiv abstract Link -->
-                <span class="link-block">
-                  <a href="https://arxiv.org/abs/2502.19930" target="_blank"
-                  class="external-link button is-normal is-rounded is-dark">
+              <span class="link-block">
+                <a href="https://arxiv.org/abs/2502.19930" target="_blank"
+                class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="ai ai-arxiv"></i>
                   </span>
-                  <span>arXiv</span>
+                <span>arXiv</span>
                 </a>
               </span>
             </div>
@@ -143,11 +149,31 @@
     <div class="hero-body">
       <video poster="" id="tree" autoplay controls muted loop height="100%">
         <!-- Your video here -->
-        <source src="static/video/problem_of_previous_re.mp4"
+        <source src="static/video/accumulation_error_dds.mp4"
         type="video/mp4">
       </video>
       <h2 class="subtitle has-text-centered">
-         In DDS, misalignment between random noise \( \epsilon \) and estimated score \( \epsilon_{\phi}^{\text{src}} \) causes error. This error is accumulated during optimization process, resulting in undesired output.
+         In DDS, misalignment between random noise \( \epsilon \) and estimated score \( \epsilon_{\phi}^{\text{src}} \) causes error. <br>
+         This error accumulates during the optimization process, resulting in undesired changes such as structure and pose.
+      </h2>
+    </div>
+  </div>
+</section>
+<!-- End teaser video -->
+
+<!-- Teaser video-->
+<section class="hero teaser">
+  <div class="container is-max-desktop">
+    <h2 class="title is-3">IDS Pipeline</h2>
+    <div class="hero-body">
+      <video poster="" id="tree" autoplay controls muted loop height="100%">
+        <!-- Your video here -->
+        <source src="static/video/IDS_pipeline.mp4"
+        type="video/mp4">
+      </video>
+      <h2 class="subtitle has-text-centered">
+         To reduce the error caused by misalignment, we propose <b>Identity-preserving Distillation Sampling (IDS)</b> method by <b>Fixed-Point Regularization (FPR)</b>.
+         Updating the noisy source latent \( \mathbf{z}_{t}^{\text{src}} \) with FPR loss, IDS provides an edited result that is aligned with target prompt \( y^{\text{trg}} \) while maintaining the source's identity.
       </h2>
     </div>
   </div>
@@ -162,7 +188,13 @@
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-            Score distillation sampling (SDS) demonstrates a powerful capability for text-conditioned 2D image and 3D object generation by distilling the knowledge from learned score functions. However, SDS often suffers from blurriness caused by noisy gradients. When SDS meets the image editing, such degradations can be reduced by adjusting bias shifts using reference pairs, but the de-biasing techniques are still corrupted by erroneous gradients. To this end, we introduce Identity-preserving Distillation Sampling (IDS), which compensates for the gradient leading to undesired changes in the results. Based on the analysis that these errors come from the text-conditioned scores, a new regularization technique, called fixed-point iterative regularization (FPR), is proposed to modify the score itself, driving the preservation of the identity even including poses and structures. Thanks to a self-correction by FPR, the proposed method provides clear and unambiguous representations corresponding to the given prompts in image-to-image editing and editable neural radiance field (NeRF). The structural consistency between the source and the edited data is obviously maintained compared to other state-of-the-art methods.
+            Score distillation sampling (SDS) demonstrates a powerful capability for text-conditioned 2D image and 3D object generation by distilling the knowledge from learned score functions. 
+            However, SDS often suffers from blurriness caused by noisy gradients. 
+            When SDS meets the image editing, such degradations can be reduced by adjusting bias shifts using reference pairs, but the de-biasing techniques are still corrupted by erroneous gradients. 
+            To this end, we introduce Identity-preserving Distillation Sampling (IDS), which compensates for the gradient leading to undesired changes in the results. 
+            Based on the analysis that these errors come from the text-conditioned scores, a new regularization technique, called fixed-point iterative regularization (FPR), is proposed to modify the score itself, driving the preservation of the identity even including poses and structures. 
+            Thanks to a self-correction by FPR, the proposed method provides clear and unambiguous representations corresponding to the given prompts in image-to-image editing and editable neural radiance field (NeRF). 
+            The structural consistency between the source and the edited data is obviously maintained compared to other state-of-the-art methods.
           </p>
         </div>
       </div>
