--- a/index.html
+++ b/index.html
@@ -142,7 +142,47 @@
   </div>
 </section>
 
-<!-- Teaser video-->
+<!-- qualitative results image -->
+<section class="hero is-small">
+  <h2 class="title is-3">Qualitative Results on IP2P datasets</h2>
+  <div class="hero-body">
+    <div class="container">
+      <div id="results-carousel" class="carousel results-carousel">
+       <div class="item">
+        <!-- Your image here -->
+        <img src="static/images/qualitative.png" alt="MY ALT TEXT" style="width: 80%; height: auto;"/>
+        <h2 class="subtitle has-text-centered">
+          Our method successfully edits the image aligning with the target text prompt while preserving the structural integrity of the source image.
+        </h2>
+      </div>
+  </div>
+</div>
+</div>
+</section>
+<!-- End qualitative results image -->
+
+<!-- NeRF result video-->
+<section class="hero teaser">
+  <div class="container is-max-desktop">
+    <h2 class="title is-3">Qualitative Results of NeRF on LLFF dataset</h2>
+    <div class="hero-body">
+      <video poster="" id="tree" autoplay controls muted loop height="100%">
+        <!-- Your video here -->
+        <source src="static/video/nerf_leaves.mp4"
+        type="video/mp4">
+      </video>
+      <h2 class="subtitle has-text-centered">
+         IDS outperforms the baselines by preserving the structural consistency of the source image and maintaining the integrity of regions that should remain unchanged, 
+        while precisely editing only the areas specified by the target prompt. 
+        Furthermore, comparisons of the depth map results also highlight the superior consistency of our method over other baseline models. <br>
+        Source prompt: The green leaves. \( \rightarraw \) Target prompt: Yellow and red leaves in autumn.
+      </h2>
+    </div>
+  </div>
+</section>
+<!-- End NeRF result video -->
+
+<!-- DDS error video-->
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <h2 class="title is-3">Accumulation error in DDS</h2>
@@ -159,9 +199,9 @@
     </div>
   </div>
 </section>
-<!-- End teaser video -->
+<!-- End DDS error video -->
 
-<!-- Teaser video-->
+<!-- IDS video-->
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <h2 class="title is-3">IDS Pipeline</h2>
@@ -178,7 +218,7 @@
     </div>
   </div>
 </section>
-<!-- End teaser video -->
+<!-- End IDS video -->
 
 <!-- Paper abstract -->
 <section class="section hero is-light">
@@ -211,7 +251,7 @@
       <div id="results-carousel" class="carousel results-carousel">
        <div class="item">
         <!-- Your image here -->
-        <img src="static/images/algorithm.png" alt="MY ALT TEXT"/>
+        <img src="static/images/algorithm.png" alt="MY ALT TEXT" style="width: 80%; height: auto;"/>
         <h2 class="subtitle has-text-centered">
           Overall flowchart of IDS
         </h2>
