--- a/index.html
+++ b/index.html
@@ -144,20 +144,22 @@
 
 <!-- qualitative results image -->
 <section class="hero is-small">
-  <h2 class="title is-3">Qualitative Results on IP2P datasets</h2>
-  <div class="hero-body">
-    <div class="container">
-      <div id="results-carousel" class="carousel results-carousel">
-       <div class="item">
-        <!-- Your image here -->
-        <img src="static/images/qualitative.png" alt="MY ALT TEXT" style="width: 80%; height: auto;"/>
-        <h2 class="subtitle has-text-centered">
-          Our method successfully edits the image aligning with the target text prompt while preserving the structural integrity of the source image.
-        </h2>
+  <div class="container is-max-desktop">
+    <h2 class="title is-3">Qualitative Results on IP2P datasets</h2>
+    <div class="hero-body">
+      <div class="container">
+        <div id="results-carousel" class="carousel results-carousel">
+          <div class="item">
+            <!-- Your image here -->
+            <img src="static/images/qualitative.png" alt="MY ALT TEXT"/>
+            <h2 class="subtitle has-text-centered">
+              Our method successfully edits the image aligning with the target text prompt while preserving the structural integrity of the source image.
+            </h2>
+          </div>
+        </div>
       </div>
+    </div>
   </div>
-</div>
-</div>
 </section>
 <!-- End qualitative results image -->
 
@@ -172,10 +174,7 @@
         type="video/mp4">
       </video>
       <h2 class="subtitle has-text-centered">
-         IDS outperforms the baselines by preserving the structural consistency of the source image and maintaining the integrity of regions that should remain unchanged, 
-        while precisely editing only the areas specified by the target prompt. 
-        Furthermore, comparisons of the depth map results also highlight the superior consistency of our method over other baseline models. <br>
-        Source prompt: The green leaves. \( \rightarraw \) Target prompt: Yellow and red leaves in autumn.
+        Source prompt: The green leaves. \( \rightarrow \) Target prompt: Yellow and red leaves in autumn.
       </h2>
     </div>
   </div>
@@ -246,37 +245,22 @@
 
 <!-- Image carousel -->
 <section class="hero is-small">
-  <div class="hero-body">
-    <div class="container">
-      <div id="results-carousel" class="carousel results-carousel">
-       <div class="item">
-        <!-- Your image here -->
-        <img src="static/images/algorithm.png" alt="MY ALT TEXT" style="width: 80%; height: auto;"/>
-        <h2 class="subtitle has-text-centered">
-          Overall flowchart of IDS
-        </h2>
+  <div class="container is-max-desktop">
+    <h2 class="title is-3">Overall flowchart of IDS</h2>
+    <div class="hero-body">
+      <div class="container">
+        <div id="results-carousel" class="carousel results-carousel">
+          <div class="item">
+            <!-- Your image here -->
+            <img src="static/images/algorithm.png" alt="MY ALT TEXT"/>
+            <h2 class="subtitle has-text-centered">
+              
+            </h2>
+          </div>
+        </div>
       </div>
-<!--       <div class="item">
-        <img src="static/images/carousel2.jpg" alt="MY ALT TEXT"/>
-        <h2 class="subtitle has-text-centered">
-          Second image description.
-        </h2>
-      </div> -->
-<!--       <div class="item">
-        <img src="static/images/carousel3.jpg" alt="MY ALT TEXT"/>
-        <h2 class="subtitle has-text-centered">
-         Third image description.
-       </h2>
-     </div> -->
-<!--      <div class="item">
-      <img src="static/images/carousel4.jpg" alt="MY ALT TEXT"/>
-      <h2 class="subtitle has-text-centered">
-        Fourth image description.
-      </h2>
-    </div> -->
+    </div>
   </div>
-</div>
-</div>
 </section>
 <!-- End image carousel -->
 
