--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
 <!-- qualitative results image -->
 <section class="hero is-small">
-  <div class="container is-max-desktop">
+  <div class="container is-max-widescreen">
     <h2 class="title is-3">Qualitative Results on IP2P datasets</h2>
     <div class="hero-body">
       <div class="container">
