--- a/index.html
+++ b/index.html
@@ -148,14 +148,14 @@
     <h2 class="title is-3">Qualitative Results on IP2P datasets</h2>
     <div class="hero-body">
       <div class="container">
-        <div id="results-carousel" class="carousel results-carousel">
-          <div class="item">
+<!--         <div id="results-carousel" class="carousel results-carousel">
+          <div class="item"> -->
             <!-- Your image here -->
             <img src="static/images/qualitative.png" alt="MY ALT TEXT"/>
             <h2 class="subtitle has-text-centered">
               Our method successfully edits the image aligning with the target text prompt while preserving the structural integrity of the source image.
             </h2>
-          </div>
+<!--           </div> -->
         </div>
       </div>
     </div>
