--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
   <script id="MathJax-script" async
     src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
+  <style>
+    .carousel .item {
+      width: 100% !important;       /* 한 셀에 하나만 차지하게 */
+      text-align: center;           /* 이미지와 자막 가운데 정렬 */
+    }
+  </style>
+
 </head>
 <body>
   <section class="hero">
@@ -144,7 +151,7 @@
 
 <!-- qualitative results image -->
 <section class="hero is-small">
-  <div class="container is-max-widescreen">
+  <div class="container is-max-desktop">
     <h2 class="title is-3">Qualitative Results on IP2P datasets</h2>
     <div class="hero-body">
       <div class="container">
