--- a/index.html
+++ b/index.html
@@ -151,29 +151,29 @@
 
 <!-- qualitative results image -->
 <section class="hero is-small">
-  <h2 class="title is-3">Qualitative Results on IP2P datasets</h2>
+  <h2 class="title is-3" style="padding-left: 2rem;">Qualitative Results on IP2P datasets</h2>
   <div class="hero-body">
     <div class="container">
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item">
           <!-- image 1 here -->
-          <img src="static/images/bear.png" alt="MY ALT TEXT" style="width: 70%; height: auto; display: block; margin: 0 auto;" />
+          <img src="static/images/bear.png" alt="MY ALT TEXT" style="width: 80%; height: auto; display: block; margin: 0 auto;" />
         </div>
         <div class="item">
           <!-- image 2 here -->
-          <img src="static/images/bike.png" alt="MY ALT TEXT" style="width: 70%; height: auto; display: block; margin: 0 auto;" />
+          <img src="static/images/bike.png" alt="MY ALT TEXT" style="width: 80%; height: auto; display: block; margin: 0 auto;" />
         </div>
         <div class="item">
           <!-- image 3 here -->
-          <img src="static/images/dolphine.png" alt="MY ALT TEXT" style="width: 70%; height: auto; display: block; margin: 0 auto;" />
+          <img src="static/images/dolphine.png" alt="MY ALT TEXT" style="width: 80%; height: auto; display: block; margin: 0 auto;" />
         </div>
         <div class="item">
           <!-- image 4 here -->
-          <img src="static/images/fruit.png" alt="MY ALT TEXT" style="width: 70%; height: auto; display: block; margin: 0 auto;" />
+          <img src="static/images/fruit.png" alt="MY ALT TEXT" style="width: 80%; height: auto; display: block; margin: 0 auto;" />
         </div>
         <div class="item">
           <!-- image 5 here -->
-          <img src="static/images/telephone.png" alt="MY ALT TEXT" style="width: 70%; height: auto; display: block; margin: 0 auto;" />
+          <img src="static/images/telephone.png" alt="MY ALT TEXT" style="width: 80%; height: auto; display: block; margin: 0 auto;" />
         </div>
       </div>
     </div>
