--- a/index.html
+++ b/index.html
@@ -151,7 +151,9 @@
 
 <!-- qualitative results image -->
 <section class="hero is-small">
-  <h2 class="title is-3" style="padding-left: 2rem;">Qualitative Results on IP2P datasets</h2>
+  <div class="container is-max-desktop">
+  <h2 class="title is-3">Qualitative Results on IP2P datasets</h2>
+  </div>
   <div class="hero-body">
     <div class="container">
       <div id="results-carousel" class="carousel results-carousel">
